finish styling first section homepage, add scroll

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
    "skills": "skills",
    "contact": "contact",
    "dark_mode": "dark mode",
-   "light_mode": "light mode"
+   "light_mode": "light mode",
+   "description": "I graduated from IT School in ZS im. Bohaterów Września z 1939 Roku w Ilawie, passed the E.12, E.13, E.14 exams and went abroad to build a financial cushion. All this to become a Front-End Developer without studying. For this purpose, I learned from online courses such as 'From basic to the FrontEnd Developer' course by Bartłomiej Borowczyk and 'UX & UI - the art of useful design'. Besides all that, my hobby is painting.",
+   "scroll": "Scroll to see my projects"
  }
