--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -5,6 +5,8 @@
    "skills": "Wiedza",
    "contact": "Kontakt",
    "dark_mode": "Ciemny motyw",
-   "light_mode": "Jasny motyw"
+   "light_mode": "Jasny motyw",
+   "description": "Ukończyłam technikum informatyczne w ZS im. Bohaterów Września z 1939 Roku w Iławie zdając egzaminy zawodowe E.12, E.13, E.14. Codziennie doskonalę się w sztuce programowania. W tym celu ukończyłam całą ścieżkę kursów: 'Od zera do frontend dewelopera' autorstwa Barłtomieja Borowczyka oraz wiele innych kursów. W zakładce Wiedza opisuję co dokładnie wiem w zakresie technologii React, Javascript, CSS i HTML. Zapraszam zwłaszcza rekruterów. Poza rozwojem zawodowym oddaję się sztuce: maluję obrazy akrylowe. Niektóre dzieła umieszczone są na Instagramie.",
+   "scroll": "Przejdź do projektów"
 }
  
